# minecraft-ai-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot-plugin/: pom.xml
bot-plugin/src/main/java/io/opencode/minecraft/bot/: BotPlugin.java
bot-plugin/src/main/java/io/opencode/minecraft/bot/network/: FakeChannel.java  FakePlayerConnection.java
bot-plugin/src/main/resources/: plugin.yml
docs/: AGENT.md  ARCHITECTURE.md  CLI.md  EXTENDING.md  SETUP.md  bugs.md  improvements.md
docs/agent-diary/: 2026-05-13-initial-review.md  2026-05-13-phase4-6-features.md  2026-05-13-phase4-features.md
docs/features/: README.md  opencode-skill.md  structure-respect.md  survival-mode.md  wasd-movement.md
examples/: goals.yaml
mcpq-config/: config.yml
minecraft_ai_bridge/: __init__.py  __main__.py  config.py  main.py
minecraft_ai_bridge/bridge/: __init__.py  chat_commands.py  goal_manager.py  inventory_manager.py  memory.py  orchestrator.py  self_preservation.py
minecraft_ai_bridge/llm/: client.py  models.py  prompts.py
minecraft_ai_bridge/minecraft/: __init__.py  actions.py  mc_api.py  observer.py  pathfinding.py  rcon.py
scripts/: download-plugins.sh
tests/: __init__.py  conftest.py  test_actions.py  test_chat_commands.py  test_goal_manager.py  test_integration.py  test_inventory_manager.py  test_memory.py  test_observer.py  test_pathfinding.py  test_prompts.py  test_self_preservation.py
