[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-ai-bridge"
version = "0.2.0"
description = "AI agent-to-Minecraft-Server bridge that enables LLMs to play Minecraft and execute goals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Minecraft AI Bridge" },
]

keywords = ["minecraft", "ai", "llm", "agent", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "openai>=1.0",
    "mcpq>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
ollama = []
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
minecraft-ai-bridge = "minecraft_ai_bridge.main:main"

[tool.setuptools.packages.find]
include = ["minecraft_ai_bridge*"]
