[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-ai-bridge"
version = "0.5.0"
description = "AI agent-to-Minecraft-Server bridge that enables LLMs to play Minecraft and execute goals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Minecraft AI Bridge" },
]

keywords = ["minecraft", "ai", "llm", "agent", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "openai>=1.0",
    "mcpq>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
ollama = []
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/luluthehungrycat/minecraft-ai-bridge"
Repository = "https://github.com/luluthehungrycat/minecraft-ai-bridge"

[project.scripts]
minecraft-ai-bridge = "minecraft_ai_bridge.main:main"

[tool.setuptools.packages.find]
include = ["minecraft_ai_bridge*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
markers = [
    "asyncio: mark test as async",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = false
